# xa

./: LICENSE-CODE  README.rst  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml
docs/: Makefile
docs/source/: 404.html  404.rst  conf.py  index.rst
docs/source/_static/extra/: epilog.rst
docs/source/assets/html/: contributed.html
docs/source/explained/docker/: index.rst
docs/source/explained/eli5/: index.rst
docs/source/miscellany/: faq.rst  guiding-stars.rst  year-in-review-2025.rst  youtube-videos.rst
docs/source/projects/: slowtorch.rst  xsnumpy.rst
theme/: __init__.py
theme/base/static/: base.css  code.css  doc-search.css  geist.css  sphinx-design.css  theme.css  theme.js
theme/base/templates/: author.html.jinja  breadcrumbs.html.jinja  feedback.html.jinja  footer.html.jinja  genindex.html  header.html.jinja  layout.html  left_sidebar.html.jinja  page.html  picture.html.jinja  previous_next_pages.html.jinja  repository.html.jinja  right_sidebar.html.jinja  scrolltop.html.jinja  search.html  searchbox.html.jinja  thumbnail.html.jinja  video.html.jinja  youtube.html.jinja
theme/extensions/: __init__.py  author.py  picture.py  repository.py  roles.py  thumbnail.py  utils.py  video.py  youtube.py
